about us and inspiration page  functionality tests and basic css. css touch up on header and footer

--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>¥$</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
   </head>
   <body>
     <noscript></noscript>
@@ -38,3 +41,5 @@
     -->
   </body>
 </html>
+
+Message Brandon Kim, Leo Ramos
