--- a/public/index.html
+++ b/public/index.html
@@ -26,8 +26,7 @@
     <title>¥$</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Oswald:wght@200..700&family=Tulpen+One&family=Zilla+Slab:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">  </head>
   <body>
     <noscript></noscript>
     <div id="root"></div>
@@ -41,5 +40,3 @@
     -->
   </body>
 </html>
-
-Message Brandon Kim, Leo Ramos
